# pullix

./: .gitignore  Cargo.toml  LICENSE.md  README.md  devenv.nix  devenv.yaml  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yml  report-and-push.yml  update.yml
nix/: hm-module.nix  nixos-module.nix  package.nix
src/: config.rs  deploy.rs  flake.rs  git.rs  lib.rs  main.rs  metrics.rs  nix_commands.rs  observability.rs  systemd.rs  webhooks.rs
