[package]
name = "pullix"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.10+spec-1.1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = { version = "0.20.3", features = ["https", "ssh"] }
tempfile = "3.24.0"
gethostname = "1.1.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
dataclasses = "0.1.0"
derive_more = {version="2.1.1",features=["full"]}
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.42", features = ["full","test-util"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
