[package]
name = "pullix"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-opentelemetry = "0.33.0"
git2 = { version = "0.21.0", features = ["https", "ssh"] }
tempfile = "3.24.0"
gethostname = "1.1.0"
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = "0.32.1"
derive_more = {version="2.1.1",features=["full"]}
thiserror = "2.0.18"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }

[dev-dependencies]
tokio = { version = "1.42", features = ["full","test-util"] }
wiremock = "0.6"

[profile.release]
strip = true
lto = true
codegen-units = 1
